# sbc

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  Dockerfile.aws.lambda  docker-compose.yml  requirements.txt  sbc.code-workspace  todos.todo
backend/: .env  app.py  config.py  database.py  helpers.py  indikit_importer.py  jwt_verifier.py  model_events.py  models.py  pyproject.toml  requirements.txt  schema.py  utils.py
backend/alembic/: alembic.ini  env.py
backend/alembic/versions/: 14f1e308737c_add_timestamps_to_indicators_and_risks.py  18baa18af38e_add_toc_item_id_to_project_data.py  1b385a62dc57_add_stakeholder_to_msgs_sent_users_and_.py  1fd4d2725491_make_toc_item_id_optional_on_activies.py  2688fadb34a8_create_project_indicators_table.py  30fabca44e2c_add_evaluation_period_to_monitoring_.py  353a2e4c9153_add_organisaton_to_projects_table.py  361a95e5ca42_add_timestamps_to_activities.py  38defd1a195a_update_monitoring_table.py  3f5e534a87c7_set_default_duration_to_null_in_.py  (+34 more)
backend/db_models/: communications.py  lookups.py  organisation.py  project.py
backend/handlers/: exception_handler.py  http_exception_handler.py
backend/helpers/: config.py  jwt_verifier.py  model_events.py
backend/http/: theory_of_change.http
backend/routes/: activity.py  activity_route.py  communication_route.py  data_service_route.py  feedback_route.py  indicators.py  lookups.py  lookups_route.py  monitoring.py  open_ai_route.py  organisation_route.py  project.py  project_route.py  theory_of_change.py  twilio_route.py  users.py  users_route.py
frontend/: .gitignore  (+6 more)
(+126 files in other folders)
